Phase 1: Auth & User Management (JWT + PostgreSQL) — strict status codes, entry points